This file contains details of the changes in each new version of PRISM.

-----------------------------------------------------------------------------
Latest changes (mostly reverse chronological):
[correct wrt svn rev 5476]
-----------------------------------------------------------------------------

* Prototype reactions-to-PRISM translator
* New options to plot graphs for simulation paths in the GUI
* Improvements to simulation path generation using -simpath switch
  - more efficient path generation (on-the-fly) where possible
  - new 'snapshot' option to only show states at certain time-points
  - rewards are not displayed by default; use 'rewards' option to show
* Easier zoom-out (double click) in graphs in GUI
* Additional log output of progress for numerical solution techniques
* Changes to PRISM default settings
  - settings file ~/.prism only read by GUI (not command-line) by default
  - new switch -settings to read a settings file from command-line PRISM
* New switch -exportdigital for exporting PRISM code generated by digital clocks PTA engine
* New scripts: prism-auto/prism-test/prism-filler
* Added new "printall" filter.
* Added viewing of witness/counterexample for E[F...] in GUI.
* New syntax for transient probabilities in P operator: P=?[ F=T "target" ]
* New (hidden) options for different symbolic reachability methods (-frontier, -bfs).
* Command-line support for (incrementally) computing ranges of transient probabilities (e.g. -tr 0.1:0.01:0.2) 
* New file extensions: .prism, .props
* Major changes to underlying PRISM API
* Changes to deadlock handling:
  - new option for "fix deadlocks" (defaults to *true*) (and new switch -fixdl) 
  - consistent deadlock handling everywhere, incl. GUI and experiments
  - changes to model-level deadlock storage (symbolic and explicit)
* Explicit engine added as true engine, also available from GUI
* New MDP solution methods (explicit engine only: ...) -politer
