@@ -202,6 +202,19 @@ public class CTMCModelChecker extends DTMCModelChecker
 	// Numerical computation functions
 
 	/**
+	 * Compute next=state probabilities.
+	 * i.e. compute the probability of being in a state in {@code target} in the next step.
+	 * @param dtmc The DTMC
+	 * @param target Target states
+	 */
+	public ModelCheckerResult computeNextProbs(DTMC dtmc, BitSet target) throws PrismException
+	{
+		mainLog.println("Building embedded DTMC...");
+		DTMC dtmcEmb = ((CTMC) dtmc).buildImplicitEmbeddedDTMC();
+		return super.computeNextProbs(dtmcEmb, target);
+	}
+
+	/**
 	 * Compute reachability/until probabilities.
 	 * i.e. compute the probability of reaching a state in {@code target},
 	 * while remaining in those in @{code remain}.
@@ -216,7 +229,7 @@ public class CTMCModelChecker extends DTMCModelChecker
 	{
 		mainLog.println("Building embedded DTMC...");
 		DTMC dtmcEmb = ((CTMC) dtmc).buildImplicitEmbeddedDTMC();
-		return super.computeReachProbs(dtmcEmb, null, target, init, known);
+		return super.computeReachProbs(dtmcEmb, remain, target, init, known);
 	}
 
 	/**
